chore: update lodash dedpendency to fix vulnerabilities

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
     "@types/json-stable-stringify": "^1.0.32",
-    "@types/lodash": "^4.14.123",
+    "@types/lodash": "^4.14.161",
     "@types/node": "^11.13.6",
     "@types/prettier": "^1.16.3",
     "@types/prompts": "2.0.0",
@@ -68,7 +68,7 @@
     "js-yaml": "^3.13.1",
     "json-stable-stringify": "^1.0.1",
     "latest-version": "^5.1.0",
-    "lodash": "4.17.12",
+    "lodash": "^4.17.20",
     "node-machine-id": "^1.1.12",
     "prettier": "^1.17.0",
     "react": "^16.9.0",
