--- a/package.json
+++ b/package.json
@@ -26,56 +26,56 @@
     "@types/analytics-node": "^3.1.1",
     "@types/got": "^9.6.7",
     "@types/hapi__joi": "^15.0.2",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.20",
     "@types/jest-expect-message": "^1.0.3",
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
     "@types/json-stable-stringify": "^1.0.32",
-    "@types/lodash": "^4.14.123",
-    "@types/node": "^11.13.6",
-    "@types/prettier": "^1.16.3",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.31",
+    "@types/prettier": "^2.2.2",
     "@types/prompts": "2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "copyfiles": "^2.1.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "husky": "^2.1.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "husky": "^5.1.3",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
     "lint-staged": "^8.1.7",
-    "np": "^5.0.1",
-    "snyk": "^1.250.0",
-    "ts-jest": "^26.4.4",
+    "np": "^7.4.0",
+    "snyk": "^1.467.0",
+    "ts-jest": "^26.5.2",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
-    "typewriter": "^7.3.0"
+    "typewriter": "^7.4.1"
   },
   "dependencies": {
-    "@hapi/joi": "^15.1.1",
-    "analytics-node": "3.4.0-beta.1",
-    "figures": "^3.0.0",
-    "fuse.js": "^3.4.5",
-    "got": "^9.6.0",
-    "handlebars": "4.7.6",
-    "ink": "^2.5.0",
-    "ink-link": "^1.0.0",
-    "ink-select-input": "^3.1.2",
-    "ink-spinner": "^3.0.1",
-    "ink-text-input": "^3.2.1",
-    "js-yaml": "^3.13.1",
-    "json-stable-stringify": "^1.0.1",
-    "latest-version": "^5.1.0",
-    "lodash": "4.17.20",
-    "node-machine-id": "^1.1.12",
-    "prettier": "^1.17.0",
-    "react": "^16.9.0",
-    "semver": "^6.3.0",
-    "sort-keys": "^3.0.0",
-    "typescript": "^4.1.2",
-    "yargs": "^16.1.1"
+    "@hapi/joi": "~15.1.1",
+    "analytics-node": "~4.0.1",
+    "figures": "~3.0.0",
+    "fuse.js": "~3.4.5",
+    "got": "~9.6.0",
+    "handlebars": "~4.7.7",
+    "ink": "~2.5.0",
+    "ink-link": "~1.0.0",
+    "ink-select-input": "~3.1.2",
+    "ink-spinner": "~3.0.1",
+    "ink-text-input": "~3.2.1",
+    "js-yaml": "~3.13.1",
+    "json-stable-stringify": "~1.0.1",
+    "latest-version": "~5.1.0",
+    "lodash": "~4.17.21",
+    "node-machine-id": "~1.1.12",
+    "prettier": "~1.17.0",
+    "react": "~16.9.0",
+    "semver": "~6.3.0",
+    "sort-keys": "~3.0.0",
+    "typescript": "~4.1.2",
+    "yargs": "~16.1.1"
   },
   "files": [
     "dist",
