--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typewriter",
-  "version": "7.4.1",
+  "version": "7.4.2",
   "description": "A compiler for generating strongly typed analytics clients via Segment Protocols",
   "repository": "ssh://git@github.com/segmentio/typewriter.git",
   "homepage": "https://github.com/segmentio/typewriter",
@@ -9,6 +9,10 @@
   "license": "MIT",
   "main": "./dist/src/cli/index.js",
   "bin": "./dist/src/cli/index.js",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
   "scripts": {
     "dev": "TS_NODE_FILES=true NODE_ENV=development ts-node ./src/cli",
     "build": "rm -rf dist && yarn typewriter prod && tsc && copyfiles --up 1 \"src/**/*.hbs\" dist/src/",
@@ -54,7 +58,7 @@
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.0",
-    "typewriter": "^7.4.2"
+    "typewriter": "^7.4.1"
   },
   "dependencies": {
     "@babel/core": "^7.14.8",
